--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,9 @@
-SL_TOKEN=""
-SL_DOMAIN=""
-SL_SUBDOMAINS="test test2 test3"
+# Selectel API token
+TOKEN=<your token here>
+
+MAIN_DOMAIN=<main domain>
+# List of subdomain names to update, separated by spaces
+DOMAINS=<domains to update>
+
+# Selectel API endpoint
+API_ENDPOINT="https://api.selectel.ru/domains/v1/"
